[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Car/Car.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=3]
[ext_resource path="res://Images/Characters/Head.png" type="Texture" id=4]
[ext_resource path="res://Images/Characters/Body.png" type="Texture" id=5]
[ext_resource path="res://Audio/EngineSound.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0078

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_layer = 2
gravity_scale = 30.0
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
offset_h = 0.6
drag_margin_left = 0.8
editor_draw_drag_margin = true

[node name="WheelHolder" type="PinJoint2D" parent="."]
position = Vector2( -153, 111 )
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 2.5

[node name="Wheel" parent="WheelHolder" instance=ExtResource( 1 )]

[node name="WheelHolder2" type="PinJoint2D" parent="."]
position = Vector2( 110, 111 )
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 2.5

[node name="Wheel" parent="WheelHolder2" instance=ExtResource( 1 )]

[node name="Body" type="Sprite" parent="."]
position = Vector2( -50, -44 )
texture = ExtResource( 5 )

[node name="Head" type="RigidBody2D" parent="." groups=["player"]]
position = Vector2( -54, -108 )
collision_layer = 4
mass = 0.5
contacts_reported = 1
contact_monitor = true

[node name="Sprite" type="Sprite" parent="Head"]
scale = Vector2( 0.921875, 0.921875 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="HeadJoint" type="PinJoint2D" parent="Head"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 5.0

[node name="NeckJoint" type="PinJoint2D" parent="Head"]
position = Vector2( 3, 53 )
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Car" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -221, -43, -223, 69, -203, 97, 200, 97, 216, 76, 214, -8, 8, -60, -202, -59 )

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EngineSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered" flags=6]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout" flags=6]
